<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_Phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_Device"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTempDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/textDevice"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTempPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/textPhone"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/receive_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:maxLines="5"
        android:minLines="5"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/viewSpacer_1"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/receive_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.skydoves.colorpickerview.ColorPickerView
        android:id="@+id/colorPicker"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:palette="@drawable/palette"
        app:selector="@drawable/wheel" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textColor">

        <RadioButton
            android:id="@+id/radioButtonColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:drawableStart="@drawable/ic_rgb" />

        <View
            android:id="@+id/viewSpacer_3"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radioButtonSlider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_sliders" />

        <View
            android:id="@+id/viewSpacer_4"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radioButtonTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_temperature" />

        <View
            android:id="@+id/viewSpacer_5"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radioButtonRGBFade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_fade" />

        <View
            android:id="@+id/viewSpacer_6"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radioButtonRGBWStrobo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_wuerfel" />

    </RadioGroup>

    <TextView
        android:id="@+id/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorPicker" />

    <Switch
        android:id="@+id/switchLum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/text_Luminosity"
        android:textColor="@android:color/secondary_text_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switchInv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/text_Inverted"
        android:textColor="@android:color/secondary_text_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchLum"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/textViewRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RED"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/seekBarRed"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBarRed" />

    <SeekBar
        android:id="@+id/seekBarRed"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="110dp"
        android:max="255"
        android:min="0"
        android:progress="63"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:checked="true"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/seekBarRed"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GREEN"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/seekBarGreen"
        app:layout_constraintTop_toTopOf="@+id/seekBarGreen" />

    <SeekBar
        android:id="@+id/seekBarGreen"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="32dp"
        android:max="255"
        android:min="0"
        android:progress="63"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarRed" />

    <CheckBox
        android:id="@+id/checkBoxGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:checked="true"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/seekBarGreen"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRed" />

    <TextView
        android:id="@+id/textViewBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BLUE"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/seekBarBlue"
        app:layout_constraintTop_toTopOf="@+id/seekBarBlue" />

    <SeekBar
        android:id="@+id/seekBarBlue"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="32dp"
        android:max="255"
        android:min="0"
        android:progress="63"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarGreen" />

    <CheckBox
        android:id="@+id/checkBoxBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:checked="true"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/seekBarBlue"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxGreen" />

    <TextView
        android:id="@+id/textViewWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WHITE"
        app:layout_constraintEnd_toStartOf="@+id/seekBarWhite"
        app:layout_constraintTop_toTopOf="@+id/seekBarWhite"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/checkBoxWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:checked="true"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/seekBarWhite"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxBlue" />

    <SeekBar
        android:id="@+id/seekBarWhite"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="32dp"
        android:max="255"
        android:progress="63"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/textViewWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarBlue" />

</androidx.constraintlayout.widget.ConstraintLayout>

